login info added

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -113,6 +113,11 @@
 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
+						For admin login: </n> 
+						User: s | PW: 1234
+					</div>
+					<br>
+					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
 					</div>
 					<br>
